{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 229,
  "lineage": "93be8b39-2728-948c-5dc7-40bc513ee266",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5aef4f0f9ba7feb",
            "arn": "arn:aws:ec2:eu-west-1:395364994606:elastic-ip/eipalloc-0c5aef4f0f9ba7feb",
            "domain": "vpc",
            "id": "eipalloc-0c5aef4f0f9ba7feb",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-63-33-159-135.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.159.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infra-nat-eip-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-nat-eip-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:internet-gateway/igw-0ab25d4cbb5665216",
            "id": "igw-0ab25d4cbb5665216",
            "owner_id": "395364994606",
            "tags": {
              "Name": "infra-igw",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-igw",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5aef4f0f9ba7feb",
            "association_id": "eipassoc-06a03013086e5c490",
            "connectivity_type": "public",
            "id": "nat-0cf89ed96ceac68eb",
            "network_interface_id": "eni-0b9799c281210e7a7",
            "private_ip": "10.0.101.5",
            "public_ip": "63.33.159.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00e7e732c9b48a84f",
            "tags": {
              "Name": "infra-nat-gw-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-nat-gw-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            }
          },
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030ce3ced74a26cf51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf89ed96ceac68eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030ce3ced74a26cf5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_nat_gateway.nat_gw",
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035001cd9032c00d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cf89ed96ceac68eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035001cd9032c00d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_eip.nat",
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_nat_gateway.nat_gw",
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab25d4cbb5665216",
            "id": "r-rtb-0f45695d5793cc22b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f45695d5793cc22b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_internet_gateway.igw",
            "module.eks_cluster.aws_route_table.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:route-table/rtb-030ce3ced74a26cf5",
            "id": "rtb-030ce3ced74a26cf5",
            "owner_id": "395364994606",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-private-rt-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-private-rt-eu-west-1a",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:route-table/rtb-035001cd9032c00d3",
            "id": "rtb-035001cd9032c00d3",
            "owner_id": "395364994606",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-private-rt-eu-west-1b",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-private-rt-eu-west-1b",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:route-table/rtb-0f45695d5793cc22b",
            "id": "rtb-0f45695d5793cc22b",
            "owner_id": "395364994606",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-public-rt",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-public-rt",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056dd959822657987",
            "route_table_id": "rtb-030ce3ced74a26cf5",
            "subnet_id": "subnet-0bbedf6c09a33510d"
          },
          "dependencies": [
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.private",
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e20166d71163527",
            "route_table_id": "rtb-035001cd9032c00d3",
            "subnet_id": "subnet-0b0f044c704035b83"
          },
          "dependencies": [
            "module.eks_cluster.aws_route_table.private",
            "module.eks_cluster.aws_subnet.private",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039e93d10d0e83986",
            "route_table_id": "rtb-0f45695d5793cc22b",
            "subnet_id": "subnet-00e7e732c9b48a84f"
          },
          "dependencies": [
            "module.eks_cluster.aws_route_table.public",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42a703b804d3cd7",
            "route_table_id": "rtb-0f45695d5793cc22b",
            "subnet_id": "subnet-00efaa0cda7a100e2"
          },
          "dependencies": [
            "module.eks_cluster.aws_route_table.public",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pritunl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:security-group/sg-09fe6db5334508ebd",
            "description": "Security group for VPN access to EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fe6db5334508ebd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "infra-pritunl-server-developer",
            "name_prefix": "",
            "owner_id": "395364994606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infra-pritunl-server-developer",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-pritunl-server-developer",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_pritunl_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from pritunl to EKS cluster",
            "from_port": 443,
            "id": "sgrule-1845646639",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06bef327ac669a44f",
            "security_group_rule_id": "sgr-0a7c21711c9db08c9",
            "self": false,
            "source_security_group_id": "sg-09fe6db5334508ebd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_eks_cluster.infra-cluster",
            "module.eks_cluster.aws_iam_role.infra-cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.infra-cluster-AmazonEKSClusterPolicy",
            "module.eks_cluster.aws_kms_key.eks_key",
            "module.eks_cluster.aws_security_group.pritunl",
            "module.eks_cluster.aws_subnet.private",
            "module.eks_cluster.aws_subnet.public",
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:subnet/subnet-0bbedf6c09a33510d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbedf6c09a33510d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395364994606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-private-eu-west-1a",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "private"
            },
            "tags_all": {
              "Name": "infra-private-eu-west-1a",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "private"
            },
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:subnet/subnet-0b0f044c704035b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0f044c704035b83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395364994606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-private-eu-west-1b",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "private"
            },
            "tags_all": {
              "Name": "infra-private-eu-west-1b",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "private"
            },
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:subnet/subnet-00e7e732c9b48a84f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e7e732c9b48a84f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395364994606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-public-eu-west-1a",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "public"
            },
            "tags_all": {
              "Name": "infra-public-eu-west-1a",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "public"
            },
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:subnet/subnet-00efaa0cda7a100e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00efaa0cda7a100e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395364994606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-public-eu-west-1b",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "public"
            },
            "tags_all": {
              "Name": "infra-public-eu-west-1b",
              "cost_center": "hosting",
              "environment": "infra",
              "kubernetes.io/role/elb": "1",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false",
              "tier": "public"
            },
            "vpc_id": "vpc-00b5670738a73ee00"
          },
          "dependencies": [
            "module.eks_cluster.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:395364994606:vpc/vpc-00b5670738a73ee00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fec983ad1ed61959",
            "default_route_table_id": "rtb-05c52bd7660bf75fa",
            "default_security_group_id": "sg-00d21893025224022",
            "dhcp_options_id": "dopt-0c1ea6276bdcd8818",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b5670738a73ee00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c52bd7660bf75fa",
            "owner_id": "395364994606",
            "tags": {
              "Name": "infra-vpc",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            },
            "tags_all": {
              "Name": "infra-vpc",
              "cost_center": "hosting",
              "owner": "devops",
              "product:devops": "true",
              "product:shared": "false"
            }
          }
        }
      ]
    }
  ]
}